--- a/Deep_Dive_1_Section_5_Function_parametars.ipynb
+++ b/Deep_Dive_1_Section_5_Function_parametars.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Deep_Dive_1_Section_5_Function_parametars.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNH+abU3seDW4NaqKE9TIA4",
+      "authorship_tag": "ABX9TyPz0Fc1aV0a+57kVb158tCS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6159,11 +6159,11 @@
       "metadata": {
         "id": "rtMllm7Q4WzL",
         "colab_type": "code",
+        "outputId": "25b5cae4-b766-433f-8f6e-19d9e71f2f26",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "25b5cae4-b766-433f-8f6e-19d9e71f2f26"
+        }
       },
       "source": [
         "def time_it(func, *args, **kwargs):\n",
@@ -6171,7 +6171,7 @@
         "\n",
         "time_it(print, 1, 2, 3, sep='...', end = ' ***')"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6187,11 +6187,11 @@
       "metadata": {
         "id": "hbaZ5l0w5JXa",
         "colab_type": "code",
+        "outputId": "331320ce-7d0e-4cd5-b156-c2a97dd05f94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "331320ce-7d0e-4cd5-b156-c2a97dd05f94"
+        }
       },
       "source": [
         "def time_it(func, *args, rep=1, **kwargs):\n",
@@ -6200,7 +6200,7 @@
         "\n",
         "time_it(print, 1, 2, 3, sep='-', end=' ***\\n', rep=5)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6662,18 +6662,18 @@
       "metadata": {
         "id": "XX0FtSvhHsJA",
         "colab_type": "code",
+        "outputId": "1e62a4bb-e12a-49b7-8ff2-023243e686b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1e62a4bb-e12a-49b7-8ff2-023243e686b0"
+        }
       },
       "source": [
         "from datetime import datetime\n",
         "\n",
         "print(datetime.utcnow())"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6689,11 +6689,11 @@
       "metadata": {
         "id": "zRrPhnE11pw1",
         "colab_type": "code",
+        "outputId": "efc66c96-7335-4ee3-e14b-21931e0f0c06",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "efc66c96-7335-4ee3-e14b-21931e0f0c06"
+        }
       },
       "source": [
         "def log(msg, *, dt=datetime.utcnow()):\n",
@@ -6701,7 +6701,7 @@
         "\n",
         "log('message 1')"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6717,16 +6717,16 @@
       "metadata": {
         "id": "jU0QznK_18Nu",
         "colab_type": "code",
+        "outputId": "4907f5b4-76b9-40ed-9367-4d36c74dd5b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4907f5b4-76b9-40ed-9367-4d36c74dd5b8"
+        }
       },
       "source": [
         "log('message 2', dt='2001-01-01 00:00:00')"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6742,16 +6742,16 @@
       "metadata": {
         "id": "b7YqaOCK2CdS",
         "colab_type": "code",
+        "outputId": "7a26e88b-f42d-4ea6-c456-238196d0f05e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7a26e88b-f42d-4ea6-c456-238196d0f05e"
+        }
       },
       "source": [
         "log('message 3')"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6767,16 +6767,16 @@
       "metadata": {
         "id": "tmJKxMQY2Fqu",
         "colab_type": "code",
+        "outputId": "72baaced-9d42-498c-8d61-3c84e8c62de9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "72baaced-9d42-498c-8d61-3c84e8c62de9"
+        }
       },
       "source": [
         "log('message 4')"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6824,11 +6824,11 @@
       "metadata": {
         "id": "1Bubi89o2H5P",
         "colab_type": "code",
+        "outputId": "b6c9c63c-cc50-4346-a9c7-aa6d0d2f47bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b6c9c63c-cc50-4346-a9c7-aa6d0d2f47bb"
+        }
       },
       "source": [
         "def log(msg, *, dt=None):\n",
@@ -6840,7 +6840,7 @@
         "\n",
         "log('message 1')  "
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6856,16 +6856,16 @@
       "metadata": {
         "id": "QeQ1Yilt2QHh",
         "colab_type": "code",
+        "outputId": "61953048-0351-45be-a268-52b6a4186a38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "61953048-0351-45be-a268-52b6a4186a38"
+        }
       },
       "source": [
         "log('message 2')"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6881,16 +6881,16 @@
       "metadata": {
         "id": "9_0QJM1d2Tii",
         "colab_type": "code",
+        "outputId": "a65669e9-e609-4268-fba3-8dc52f3220ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a65669e9-e609-4268-fba3-8dc52f3220ad"
+        }
       },
       "source": [
         "log('message 3', dt='2001-01-01 00:00:00')"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6906,16 +6906,16 @@
       "metadata": {
         "id": "7PWq1xJh2UwN",
         "colab_type": "code",
+        "outputId": "f191fba7-3515-42e2-e7b1-0ffdcd5d21f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f191fba7-3515-42e2-e7b1-0ffdcd5d21f0"
+        }
       },
       "source": [
         "log('message 4')"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6931,11 +6931,11 @@
       "metadata": {
         "id": "r2zHSe3H2WCW",
         "colab_type": "code",
+        "outputId": "7ad74e2d-e0e6-48c5-8cf3-eaabc69ea905",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7ad74e2d-e0e6-48c5-8cf3-eaabc69ea905"
+        }
       },
       "source": [
         "my_list = (1, 2, 3)\n",
@@ -6945,7 +6945,7 @@
         "\n",
         "func()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6961,16 +6961,16 @@
       "metadata": {
         "id": "SMbN3xCY6yFr",
         "colab_type": "code",
+        "outputId": "3f4a0458-264d-462a-f05e-3aedadeecba5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3f4a0458-264d-462a-f05e-3aedadeecba5"
+        }
       },
       "source": [
         "func(['a', 'b'])"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6986,16 +6986,16 @@
       "metadata": {
         "id": "UnN1TYC062Rb",
         "colab_type": "code",
+        "outputId": "4bd08900-4c50-45ad-af6f-cfc19f704b87",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 163
-        },
-        "outputId": "4bd08900-4c50-45ad-af6f-cfc19f704b87"
+        }
       },
       "source": [
         "my_list.append(4)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -7015,16 +7015,16 @@
       "metadata": {
         "id": "nj6aLJF266R1",
         "colab_type": "code",
+        "outputId": "78c93595-8bce-4a16-f982-e8e820a1ad5d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "78c93595-8bce-4a16-f982-e8e820a1ad5d"
+        }
       },
       "source": [
         "my_list"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7045,16 +7045,16 @@
       "metadata": {
         "id": "bmRho8rH67-A",
         "colab_type": "code",
+        "outputId": "1d5b18f9-6ce2-4f3b-cc25-0098b42e20f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1d5b18f9-6ce2-4f3b-cc25-0098b42e20f4"
+        }
       },
       "source": [
         "func()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7150,18 +7150,18 @@
       "metadata": {
         "id": "ZYCFz1Yv73zG",
         "colab_type": "code",
+        "outputId": "dc7fc4bf-0962-440a-9dd8-7b0b80a3ae4f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "dc7fc4bf-0962-440a-9dd8-7b0b80a3ae4f"
+        }
       },
       "source": [
         "add_item('bananas', 2, 'units', store_1)\n",
         "add_item('grapes', 1, 'bunch', store_1)\n",
         "add_item('python', 1, 'medium-rare', store_2)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7182,16 +7182,16 @@
       "metadata": {
         "id": "X9vO_G6b78vA",
         "colab_type": "code",
+        "outputId": "8623b306-4d12-4721-c3a5-81e9d431329e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8623b306-4d12-4721-c3a5-81e9d431329e"
+        }
       },
       "source": [
         "store_1"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7212,16 +7212,16 @@
       "metadata": {
         "id": "w7OO9ToK8BYu",
         "colab_type": "code",
+        "outputId": "45b6203d-7034-4755-e563-870b5aa1ba02",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "45b6203d-7034-4755-e563-870b5aa1ba02"
+        }
       },
       "source": [
         "store_2"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7252,13 +7252,15 @@
       "metadata": {
         "id": "LZBuqH7i8DeK",
         "colab_type": "code",
+        "outputId": "173284f1-6e87-4645-9f6c-4c3fdf21a4bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "173284f1-6e87-4645-9f6c-4c3fdf21a4bb"
+        }
       },
       "source": [
+        "del stor_1\n",
+        "del store_2\n",
         "def add_item(name, quantity, unit, grocery_list=[]):\n",
         "    item_fmt = \"{0} ({1} {2})\".format(name, quantity, unit)\n",
         "    grocery_list.append(item_fmt)\n",
@@ -7267,7 +7269,7 @@
         "store_1 = add_item('bananas', 2, 'units')\n",
         "add_item('grapes', 1, 'bunch', store_1)"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7288,16 +7290,16 @@
       "metadata": {
         "id": "M0TCG_kY8MZc",
         "colab_type": "code",
+        "outputId": "d2238292-4579-4acb-a3cb-05cd22f38728",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d2238292-4579-4acb-a3cb-05cd22f38728"
+        }
       },
       "source": [
         "store_1"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7343,16 +7345,16 @@
       "metadata": {
         "id": "6033leDF8cO8",
         "colab_type": "code",
+        "outputId": "8cc3e480-20e2-4dc6-a93f-d1da46fce950",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8cc3e480-20e2-4dc6-a93f-d1da46fce950"
+        }
       },
       "source": [
         "print(store_2)"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7388,11 +7390,11 @@
       "metadata": {
         "id": "FzkTcE2d8eVR",
         "colab_type": "code",
+        "outputId": "4a44e05c-58c6-412f-af63-5218a0fdb0e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fc6bf470-1e7e-4678-8550-fc2790a3a472"
+        }
       },
       "source": [
         "def add_item(name, quantity, unit, grocery_list=None):\n",
@@ -7405,7 +7407,7 @@
         "store_1 = add_item('bananas', 2, 'units')\n",
         "add_item('grapes', 1, 'bunch', store_1)"
       ],
-      "execution_count": 32,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7417,7 +7419,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 2
         }
       ]
     },
@@ -7426,17 +7428,17 @@
       "metadata": {
         "id": "sDj_pbkK80rr",
         "colab_type": "code",
+        "outputId": "7fdd146b-6bbe-4740-833d-0d2486ef3a97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8f9b6353-92a3-42e9-bc0d-f670c471cd81"
+        }
       },
       "source": [
         "store_2 = add_item('milk', 1, 'gallon')\n",
         "store_2"
       ],
-      "execution_count": 33,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7448,7 +7450,37 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kHcRJamccdLO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3fdff10e-b794-4b94-eafb-57328a5d5372"
+      },
+      "source": [
+        "store_1 is store_2"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
         }
       ]
     },
@@ -7476,11 +7508,11 @@
       "metadata": {
         "id": "NIV-WaPe83Un",
         "colab_type": "code",
+        "outputId": "cca618e8-bca0-443e-db01-5a9caa00c385",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "cca618e8-bca0-443e-db01-5a9caa00c385"
+        }
       },
       "source": [
         "def factorial(n):\n",
@@ -7492,7 +7524,7 @@
         "\n",
         "factorial(3)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7522,16 +7554,16 @@
       "metadata": {
         "id": "XFhr472a9Fs_",
         "colab_type": "code",
+        "outputId": "8eaf10e5-e9a0-40c4-81b0-71a9a49c9044",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "8eaf10e5-e9a0-40c4-81b0-71a9a49c9044"
+        }
       },
       "source": [
         "factorial(3)"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -7573,11 +7605,11 @@
       "metadata": {
         "id": "qbvPBOAe9H5V",
         "colab_type": "code",
+        "outputId": "f2e6991e-65fa-4d6b-826a-930c7cea27e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "bbf2fa66-dd9b-447d-e1ed-8bbe58bb4476"
+        }
       },
       "source": [
         "def factorial(n, cache={}):\n",
@@ -7593,7 +7625,7 @@
         "\n",
         "factorial(3)"
       ],
-      "execution_count": 37,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -7614,7 +7646,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 6
         }
       ]
     },
@@ -7623,16 +7655,16 @@
       "metadata": {
         "id": "xAHcItjb9R0-",
         "colab_type": "code",
+        "outputId": "303ee739-dcae-4228-d878-8a8e592e55dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "74918088-4b4a-4db8-b629-c11900d90ac6"
+        }
       },
       "source": [
         "factorial(3)"
       ],
-      "execution_count": 38,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7644,7 +7676,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 7
         }
       ]
     },
@@ -7663,16 +7695,16 @@
       "metadata": {
         "id": "i5Ces_Rl9UFK",
         "colab_type": "code",
+        "outputId": "fdcd04e8-fce0-4b99-bffd-6db0384808f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "f6dec9ec-b7ce-4bff-f1d2-b0a432ceac3a"
+        }
       },
       "source": [
         "factorial(5)"
       ],
-      "execution_count": 39,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -7692,7 +7724,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 8
         }
       ]
     },
