--- a/Deep_Dive_1_Section_6_First_class_Functions.ipynb
+++ b/Deep_Dive_1_Section_6_First_class_Functions.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Deep_Dive_1_Section_6_First_class_Functions.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMcFz7C5hdGCv0UDLuUFavc",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNEiT7v1P5JDzEQYlvfGTpA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,16 +185,16 @@
       "metadata": {
         "id": "wm1-YIUpbSFl",
         "colab_type": "code",
+        "outputId": "07d1eb8b-8ce0-4aaa-954b-5513258a9735",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        },
-        "outputId": "07d1eb8b-8ce0-4aaa-954b-5513258a9735"
+        }
       },
       "source": [
         "help(print)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,16 +245,16 @@
       "metadata": {
         "id": "PltC4gLIgF4S",
         "colab_type": "code",
+        "outputId": "e8baa105-1ef0-4755-b547-b17a046ab64f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "e8baa105-1ef0-4755-b547-b17a046ab64f"
+        }
       },
       "source": [
         "help(my_func)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,11 +273,11 @@
       "metadata": {
         "id": "inyRH8CNgH7N",
         "colab_type": "code",
+        "outputId": "73a09cfb-89db-4d0e-9892-34565ecd4c1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "73a09cfb-89db-4d0e-9892-34565ecd4c1d"
+        }
       },
       "source": [
         "def my_func(a, b):\n",
@@ -285,7 +286,7 @@
         "\n",
         "help(my_func)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,11 +316,11 @@
       "metadata": {
         "id": "etDEcqGPgQ3K",
         "colab_type": "code",
+        "outputId": "8d1a9fee-4b33-41a7-d819-ec1e342a096b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        },
-        "outputId": "8d1a9fee-4b33-41a7-d819-ec1e342a096b"
+        }
       },
       "source": [
         "def fact(n):\n",
@@ -342,7 +343,7 @@
         "\n",
         "help(fact)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,16 +380,16 @@
       "metadata": {
         "id": "-sPdaf_Fgc09",
         "colab_type": "code",
+        "outputId": "e88d08be-b0e7-4127-f494-ae1b81becf75",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "e88d08be-b0e7-4127-f494-ae1b81becf75"
+        }
       },
       "source": [
         "fact.__doc__"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -439,11 +440,11 @@
       "metadata": {
         "id": "CN_wAsGmgol1",
         "colab_type": "code",
+        "outputId": "0debb7f3-6349-4824-f3f7-fd9bf3ad6868",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "0debb7f3-6349-4824-f3f7-fd9bf3ad6868"
+        }
       },
       "source": [
         "def my_func(a:'annotation for a', \n",
@@ -453,7 +454,7 @@
         "\n",
         "help(my_func)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,11 +483,11 @@
       "metadata": {
         "id": "KOqwjppOj3lu",
         "colab_type": "code",
+        "outputId": "cb4cf079-9756-4184-8f72-049106948cf0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "cb4cf079-9756-4184-8f72-049106948cf0"
+        }
       },
       "source": [
         "x = 3\n",
@@ -495,7 +496,7 @@
         "\treturn a*max(x, y)\n",
         "help(my_func)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,16 +528,16 @@
       "metadata": {
         "id": "veHSUQj3kKUA",
         "colab_type": "code",
+        "outputId": "83057f2e-fa6b-49ff-d3b2-3b5320539945",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "83057f2e-fa6b-49ff-d3b2-3b5320539945"
+        }
       },
       "source": [
         "my_func.__annotations__"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -567,11 +568,11 @@
       "metadata": {
         "id": "4suVtkbSkaiO",
         "colab_type": "code",
+        "outputId": "3f946221-58cb-4612-afac-a34470b0b7ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        },
-        "outputId": "3f946221-58cb-4612-afac-a34470b0b7ca"
+        }
       },
       "source": [
         "def fact(n: 'int >= 0')->int:\n",
@@ -591,7 +592,7 @@
         "\n",
         "help(fact)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,11 +627,11 @@
       "metadata": {
         "id": "K47_mUD_kgQg",
         "colab_type": "code",
+        "outputId": "13f521c3-8412-464b-806f-30abb84c40db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "13f521c3-8412-464b-806f-30abb84c40db"
+        }
       },
       "source": [
         "def my_func(a:str='a', b:int=1)->str:\n",
@@ -638,7 +639,7 @@
         "\n",
         "help(my_func)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,16 +658,16 @@
       "metadata": {
         "id": "l94_BinPkkvp",
         "colab_type": "code",
+        "outputId": "3944797a-f178-4a8a-98be-a3f2e72ca61a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3944797a-f178-4a8a-98be-a3f2e72ca61a"
+        }
       },
       "source": [
         "my_func()"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -687,16 +688,16 @@
       "metadata": {
         "id": "wPJYPwk4kxZu",
         "colab_type": "code",
+        "outputId": "cf2868c5-7792-43f2-da09-d34f75a9bfa0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cf2868c5-7792-43f2-da09-d34f75a9bfa0"
+        }
       },
       "source": [
         "my_func('abc', 3)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -717,11 +718,11 @@
       "metadata": {
         "id": "w3eJcJDGkzDK",
         "colab_type": "code",
+        "outputId": "0541c7ce-1a83-4a19-aa21-d2925c639649",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "0541c7ce-1a83-4a19-aa21-d2925c639649"
+        }
       },
       "source": [
         "def my_func(a:int=0, *args:'additional args'):\n",
@@ -729,7 +730,7 @@
         "\n",
         "help(my_func)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,16 +749,16 @@
       "metadata": {
         "id": "gVb4NLd6k3BJ",
         "colab_type": "code",
+        "outputId": "1e268ba6-8a39-47e6-9321-5f6231b868a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1e268ba6-8a39-47e6-9321-5f6231b868a6"
+        }
       },
       "source": [
         "my_func.__annotations__"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,6 +778,174 @@
       "cell_type": "code",
       "metadata": {
         "id": "t539Sj9Hk5CE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def my_func(a: str,\n",
+        "            b: 'int > 0' = 1,\n",
+        "            *args: 'some extra positional args',\n",
+        "            k1: 'keyword-only arg 1',\n",
+        "            k2: 'keyword-only arg 2' = 100,\n",
+        "            **kwargs: 'some extra keyword-only args') -> 'something':\n",
+        "            print(a, b, args, k1, k2, kwargs)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5VGtbL-1zugp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "eb8a678e-89f5-40f0-81eb-fc9752101662"
+      },
+      "source": [
+        "help(my_func)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Help on function my_func in module __main__:\n",
+            "\n",
+            "my_func(a:str, b:'int > 0'=1, *args:'some extra positional args', k1:'keyword-only arg 1', k2:'keyword-only arg 2'=100, **kwargs:'some extra keyword-only args') -> 'something'\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "slEIPtvhzy99",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "7b1696aa-82f9-4a56-f15c-7e6522cf240a"
+      },
+      "source": [
+        "my_func.__annotations__"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': str,\n",
+              " 'args': 'some extra positional args',\n",
+              " 'b': 'int > 0',\n",
+              " 'k1': 'keyword-only arg 1',\n",
+              " 'k2': 'keyword-only arg 2',\n",
+              " 'kwargs': 'some extra keyword-only args',\n",
+              " 'return': 'something'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rKalyEnkz2dw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "bfcc01eb-b7e2-42a6-fb77-b473828947d6"
+      },
+      "source": [
+        "my_func(1, 2, 3, 4, 55, k1=10, k3=300, k4=600, kakoTo=20202)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 2 (3, 4, 55) 10 100 {'k3': 300, 'k4': 600, 'kakoTo': 20202}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HHxEnwtJ0Gpb",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 3.Lambda Expressions"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jsXTBcp20Lr5",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1nQMQAeoI1rbtJtwOUYPN4KUrcLIEH90A)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WJ7GZhYG0L1g",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1FLi5EZfbkDZKnNL9G3Az8IPSuwszJKN1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Tja6N9qA1FWf",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1XOx69Tt5ZE7zePfk7jv7w293Fd_P0Fsr)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GYJuLW_31Ffh",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=14KxubRSxb3BDANuIO0kEJAD3vnzupXeW)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VRGk_FtS1GWz",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=143EHD1rWCnnbUzMyYxfz3u5WHAiQXa-I)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QeAJ2Pnr0BjV",
         "colab_type": "code",
         "colab": {}
       },
